--- a/web2/index2.html
+++ b/web2/index2.html
@@ -21,6 +21,7 @@ body {
   text-align: center;
   background: #1abc9c;
   color: white;
+  background-image: url("a.jpeg");
 }
 
 /* Increase the font size of the heading */
@@ -78,6 +79,7 @@ body {
   flex: 70%;
   background-color: white;
   padding: 20px;
+  background-image: url("b.jpeg");
 }
 
 /* Fake image, just for this example */
@@ -85,6 +87,7 @@ body {
   background-color: #aaa;
   width: 100%;
   padding: 20px;
+  background-image: url("b.jpeg");
 }
 
 /* Footer */
@@ -115,13 +118,14 @@ body {
 <div class="header">
   <h1>My Website</h1>
   <p>A website created by me.</p>
+
 </div>
 
 <div class="navbar">
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-  <a href="#" class="right">Link</a>
+  <a href="#">Home</a>
+  <a href="#">Gallary</a>
+  <a href="#">About</a>
+  <a href="#" class="right">More</a>
 </div>
 
 <div class="row">
