--- a/web2/index2.html
+++ b/web2/index2.html
@@ -115,6 +115,16 @@ body {
 </head>
 <body>
 
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="/__/firebase/8.0.0/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="/__/firebase/8.0.0/firebase-analytics.js"></script>
+
+<!-- Initialize Firebase -->
+<script src="/__/firebase/init.js"></script>
+
 <div class="header">
   <h1>My Website</h1>
   <p>A website created by me.</p>
@@ -123,7 +133,7 @@ body {
 
 <div class="navbar">
   <a href="#">Home</a>
-  <a href="#">Gallary</a>
+  <a href="D:\lesanabbas.github.io\web2\second.html">Gallary</a>
   <a href="#">About</a>
   <a href="#" class="right">More</a>
 </div>
