--- a/first/first.html
+++ b/first/first.html
@@ -74,6 +74,7 @@
                 <button class="btn">Website 2</button>
                 <button class="btn">Website 3</button>
                 <button class="btn">Website 4</button>
+                <a href="second.html">Next Page</a>
             </div>
             <div class="bottom">
                 Powered by <a class="link" href="D:\lesanabbas.github.io\first\index1.html" target="blank">LA.io</a>
