--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-  <title>Hello, world!</title>
+  <title>The Crazy Programmer</title>
   <style>
     #vd {
       opacity: 0.7;
@@ -102,7 +102,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
     <a class="navbar-brand" href="#">The Crazy Programmer</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -123,8 +123,11 @@
             Topic
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Technology</a>
-            <a class="dropdown-item" href="#">Web Dev <span class="badge badge-success">Success</span></a>
+            <a class="dropdown-item" href="#">HTML5</a>
+            <a class="dropdown-item" href="#">CSS</a>
+            <a class="dropdown-item" href="#">JavaScript</a>
+            <a class="dropdown-item" href="#">Java</a>
+            <a class="dropdown-item" href="#">Python<span class="badge badge-success ml-2">New</span></a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Support Us</a>
             <a class="dropdown-item" href="#">Write With Us</a>
