--- a/web3/index3.html
+++ b/web3/index3.html
@@ -6,7 +6,7 @@
         <button onclick="myfun()">Next Page</button>
         <script>
             function myfun() {
-                location.replace("D:\lesanabbas.github.io\web3\second.html")
+                location.replace("second.html")
             }
         </script>
     </body>
