--- a/Bootstrap/HTML5.html
+++ b/Bootstrap/HTML5.html
@@ -110,17 +110,6 @@
             border-radius: 50%;
         }
 
-        body {
-            padding: 0px;
-            background-color: white;
-            color: black;
-        }
-
-        .dark-mode {
-            background-color: black;
-            color: white;
-        }
-
         table {
             border-collapse: collapse;
             width: 100%;
@@ -136,12 +125,6 @@
             background-color: #f2f2f2;
         }
     </style>
-    <script>
-        function myFunction() {
-            var element = document.body;
-            element.classList.toggle("dark-mode");
-        }
-    </script>
 </head>
 
 <body>
@@ -187,7 +170,7 @@
             </form>
             <form class="form-inline ml-2">
                 <label class="switch">
-                    <input type="checkbox" onclick="myFunction()">
+                    <input type="checkbox" onclick="">
                     <span class="slider round"></span>
                 </label>
             </form>
