--- a/Bootstrap/HTML5.html
+++ b/Bootstrap/HTML5.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>The Crazy Programmer</title>
     <style>
         .list-group {
             height: 100%;
@@ -124,7 +124,15 @@
         tr:nth-child(even) {
             background-color: #f2f2f2;
         }
+
+        .dark-mode {
+            background-color: black;
+            color: black;
+        }
     </style>
+    <script>
+
+    </script>
 </head>
 
 <body>
@@ -160,6 +168,7 @@
                         <a class="dropdown-item" href="#">Write With Us</a>
                     </div>
                 </li>
+
                 <li class="nav-item">
                     <a class="nav-link" href="#">Contact Us</a>
                 </li>
@@ -169,10 +178,7 @@
                 <button type="button" class="btn btn-outline-success">Search</button>
             </form>
             <form class="form-inline ml-2">
-                <label class="switch">
-                    <input type="checkbox" onclick="">
-                    <span class="slider round"></span>
-                </label>
+
             </form>
         </div>
     </nav>
@@ -201,7 +207,7 @@
         <a class="list-group-item list-group-item-action" id="list" href="#list-item-20">HTML Images</a>
     </div>
 
-    <div data-spy="scroll" data-target="#list-example" data-offset="0" class="scrollspy-example">
+    <div id="dev1" data-spy="scroll" data-target="#list-example" data-offset="0" class="scrollspy-example">
         <hr>
         <h1 id="list-item-1">HTML Introduction</h1>
         <hr>
@@ -369,7 +375,8 @@
                     style="color:brown"><span class="tagcolor" style="color:mediumblue">&lt;</span>/body<span
                         class="tagcolor" style="color:mediumblue">&gt;</span></span><br><span class="tagnamecolor"
                     style="color:brown"><span class="tagcolor" style="color:mediumblue">&lt;</span>/html<span
-                        class="tagcolor" style="color:mediumblue">&gt;</span></span> </div>
+                        class="tagcolor" style="color:mediumblue">&gt;</span></span>
+            </div>
         </div>
         <hr>
         <h2>The &lt;!DOCTYPE&gt; Declaration</h2>
@@ -440,7 +447,8 @@
         <h2>The href Attribute</h2>
         <p>The <code>&lt;a&gt;</code> tag defines a hyperlink. The
             <code>href</code> attribute specifies the URL of the page
-            the link goes to:</p>
+            the link goes to:
+        </p>
         <div style="background-color: rgb(95, 105, 126); width: 100%; height: 65px; padding: 15px;">
             <div class="w3-code notranslate htmlHigh">
                 <span class="tagnamecolor" style="color:brown"><span class="tagcolor"
@@ -471,6 +479,61 @@
             <br>
         </div>
     </div>
+
+    <div class="container">
+        <div class="row">
+          <div class="col-12 col-md">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor"
+              stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mb-2" role="img"
+              viewBox="0 0 24 24" focusable="false">
+              <title>Product</title>
+              <circle cx="12" cy="12" r="10"></circle>
+              <path
+                d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94">
+              </path>
+            </svg>
+            <small class="d-block mb-3 text-muted">© 2017-2020</small>
+          </div>
+          <div class="col-6 col-md">
+            <h5>Features</h5>
+            <ul class="list-unstyled text-small">
+              <li><a class="text-muted" href="#">Cool stuff</a></li>
+              <li><a class="text-muted" href="#">Random feature</a></li>
+              <li><a class="text-muted" href="#">Team feature</a></li>
+              <li><a class="text-muted" href="#">Stuff for developers</a></li>
+              <li><a class="text-muted" href="#">Another one</a></li>
+              <li><a class="text-muted" href="#">Last time</a></li>
+            </ul>
+          </div>
+          <div class="col-6 col-md">
+            <h5>Resources</h5>
+            <ul class="list-unstyled text-small">
+              <li><a class="text-muted" href="#">Resource</a></li>
+              <li><a class="text-muted" href="#">Resource name</a></li>
+              <li><a class="text-muted" href="#">Another resource</a></li>
+              <li><a class="text-muted" href="#">Final resource</a></li>
+            </ul>
+          </div>
+          <div class="col-6 col-md">
+            <h5>Resources</h5>
+            <ul class="list-unstyled text-small">
+              <li><a class="text-muted" href="#">Business</a></li>
+              <li><a class="text-muted" href="#">Education</a></li>
+              <li><a class="text-muted" href="#">Government</a></li>
+              <li><a class="text-muted" href="#">Gaming</a></li>
+            </ul>
+          </div>
+          <div class="col-6 col-md">
+            <h5>About</h5>
+            <ul class="list-unstyled text-small">
+              <li><a class="text-muted" href="#">Team</a></li>
+              <li><a class="text-muted" href="#">Locations</a></li>
+              <li><a class="text-muted" href="#">Privacy</a></li>
+              <li><a class="text-muted" href="#">Terms</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
 
 
     <!-- Optional JavaScript; choose one of the two! -->
