--- a/web3/second.html
+++ b/web3/second.html
@@ -3,6 +3,12 @@
 
     </head>
     <body>
-        <h1 style="font-size: large; font border-color: red;">Welcome</h1>
+        <h1 style="font-size: large; border-color: red;">Welcome</h1>
+        <button onclick="goback()">GO BACK</button>
     </body>
+    <script>
+        function goback() {
+            location.replace("index3.html");
+        }
+    </script>
 </html>
