--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -124,7 +124,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="HTML5.html">HTML5</a>
-            <a class="dropdown-item" href="#">CSS</a>
+            <a class="dropdown-item" href="CSS.html">CSS</a>
             <a class="dropdown-item" href="#">JavaScript</a>
             <a class="dropdown-item" href="#">Java</a>
             <a class="dropdown-item" href="#">Python<span class="badge badge-success ml-2">New</span></a>
@@ -193,23 +193,23 @@
     <div class="row">
       <div class="col-lg-4">
         <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="a3.jpeg">
-        <h2>Heading</h2>
+        <h2>HTML5</h2>
         <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies
           vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus
           magna.</p>
-        <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+        <p><a class="btn btn-secondary" href="HTML5.html" role="button">View details »</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="a2.jpeg">
-        <h2>Heading</h2>
+        <h2>CSS</h2>
         <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis
           consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.
         </p>
-        <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+        <p><a class="btn btn-secondary" href="CSS.html" role="button">View details »</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="a6.jpeg">
-        <h2>Heading</h2>
+        <h2>JavaScript</h2>
         <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta
           felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum
           massa justo sit amet risus.</p>
@@ -223,7 +223,7 @@
       <div class="col-lg-4">
         <img class="bd-placeholder-img rounded-circle" width="140" height="140"
           src="https://images.unsplash.com/photo-1500989145603-8e7ef71d639e?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=400&ixid=eyJhcHBfaWQiOjF9&ixlib=rb-1.2.1&q=80&w=400">
-        <h2>Heading</h2>
+        <h2>Java</h2>
         <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies
           vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus
           magna.</p>
@@ -232,7 +232,7 @@
       <div class="col-lg-4">
         <img class="bd-placeholder-img rounded-circle" width="140" height="140"
           src="https://images.unsplash.com/photo-1496181133206-80ce9b88a853?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=400&ixid=eyJhcHBfaWQiOjF9&ixlib=rb-1.2.1&q=80&w=400">
-        <h2>Heading</h2>
+        <h2>Python</h2>
         <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis
           consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.
         </p>
@@ -241,7 +241,7 @@
       <div class="col-lg-4">
         <img class="bd-placeholder-img rounded-circle" width="140" height="140"
           src="https://images.unsplash.com/photo-1472220625704-91e1462799b2?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=400&ixid=eyJhcHBfaWQiOjF9&ixlib=rb-1.2.1&q=80&w=400">
-        <h2>Heading</h2>
+        <h2>Support US</h2>
         <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta
           felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum
           massa justo sit amet risus.</p>
@@ -261,7 +261,7 @@
             d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94">
           </path>
         </svg>
-        <small class="d-block mb-3 text-muted">© 2017-2020</small>
+        <small class="d-block mb-3 text-muted">© 2018-2021</small>
       </div>
       <div class="col-6 col-md">
         <h5>Features</h5>
