--- a/Bootstrap/CSS.html
+++ b/Bootstrap/CSS.html
@@ -211,8 +211,8 @@
                 </tr>
                 <tr>
                     <td class="contains">black</td>
-                    <td class="contains"></td>
-                    <td class="contains">4</td>
+                    <td class="contains">#000000</td>
+                    <td style="background-color: #000000;" class="contains">4</td>
                 </tr>
                 <tr>
                     <td class="contains">silver</td>
@@ -221,67 +221,67 @@
                 </tr>
                 <tr>
                     <td class="contains">gray</td>
-                    <td class="contains">3</td>
-                    <td class="contains">4</td>
+                    <td class="contains">#808080</td>
+                    <td style="background-color: #808080;" class="contains">4</td>
                 </tr>
                 <tr>
                     <td class="contains">while</td>
-                    <td class="contains">3</td>
-                    <td class="contains">4</td>
+                    <td class="contains">#ffffff</td>
+                    <td style="background-color: #ffffff;" class="contains">4</td>
                 </tr>
                 <tr>
                     <td class="contains">maroon</td>
-                    <td class="contains">3</td>
-                    <td class="contains">4</td>
+                    <td class="contains">#800000</td>
+                    <td style="background-color: #800000;" class="contains">4</td>
                 </tr>
                 <tr>
                     <td class="contains">red</td>
-                    <td class="contains">3</td>
+                    <td class="contains">#ff0000</td>
                     <td class="contains">4</td>
                 </tr>
                 <tr>
                     <td class="contains">purple</td>
-                    <td class="contains">3</td>
+                    <td class="contains">#800080</td>
                     <td class="contains">4</td>
                 </tr>
                 <tr>
                     <td class="contains">fuchsia</td>
-                    <td class="contains">3</td>
+                    <td class="contains">#ff00ff</td>
                     <td class="contains">4</td>
                 </tr>
                 <tr>
                     <td class="contains">green</td>
-                    <td class="contains">3</td>
+                    <td class="contains">#008000</td>
                     <td class="contains">4</td>
                 </tr>
                 <tr>
                     <td class="contains">line</td>
-                    <td class="contains">3</td>
+                    <td class="contains">#00ff00</td>
                     <td class="contains">4</td>
                 </tr>
                 <tr>
                     <td class="contains">olive</td>
-                    <td class="contains">3</td>
+                    <td class="contains">#808000</td>
                     <td class="contains">4</td>
                 </tr>
                 <tr>
                     <td class="contains">yellow</td>
-                    <td class="contains">3</td>
+                    <td class="contains">#ffff00</td>
                     <td class="contains">4</td>
                 </tr>
                 <tr>
                     <td class="contains">navy</td>
-                    <td class="contains">3</td>
+                    <td class="contains">#000080</td>
                     <td class="contains">4</td>
                 </tr>
                 <tr>
                     <td class="contains">blue</td>
-                    <td class="contains">3</td>
+                    <td class="contains">#0000ff</td>
                     <td class="contains">4</td>
                 </tr>
                 <tr>
                     <td class="contains">teal</td>
-                    <td class="contains">3</td>
+                    <td class="contains">#008080</td>
                     <td class="contains">4</td>
                 </tr>
                 <tr>
