--- a/Bootstrap/CSS.html
+++ b/Bootstrap/CSS.html
@@ -216,8 +216,8 @@
                 </tr>
                 <tr>
                     <td class="contains">silver</td>
-                    <td class="contains">3</td>
-                    <td class="contains">4</td>
+                    <td class="contains">#c0c0c0</td>
+                    <td style="background-color: #c0c0c0;" class="contains">4</td>
                 </tr>
                 <tr>
                     <td class="contains">gray</td>
