--- a/Bootstrap/CSS.html
+++ b/Bootstrap/CSS.html
@@ -106,6 +106,7 @@
         .container1 {
             margin-left: 30px;
         }
+
         .container {
             border: 1px solid black;
             background-color: rgb(52, 58, 64);
@@ -256,107 +257,107 @@
                 <tr>
                     <td class="contains">purple</td>
                     <td class="contains">#800080</td>
-                    <td style="background-color: #800080;" class="contains">4</td>
+                    <td style="background-color: #800080;" class="contains"></td>
                 </tr>
                 <tr>
                     <td class="contains">fuchsia</td>
                     <td class="contains">#ff00ff</td>
-                    <td style="background-color: #ff00ff;" class="contains">4</td>
+                    <td style="background-color: #ff00ff;" class="contains"></td>
                 </tr>
                 <tr>
                     <td class="contains">green</td>
                     <td class="contains">#008000</td>
-                    <td style="background-color: #008000;" class="contains">4</td>
+                    <td style="background-color: #008000;" class="contains"></td>
                 </tr>
                 <tr>
                     <td class="contains">line</td>
                     <td class="contains">#00ff00</td>
-                    <td style="background-color: #00ff00;" class="contains">4</td>
+                    <td style="background-color: #00ff00;" class="contains"></td>
                 </tr>
                 <tr>
                     <td class="contains">olive</td>
                     <td class="contains">#808000</td>
-                    <td style="background-color: #808000;" class="contains">4</td>
+                    <td style="background-color: #808000;" class="contains"></td>
                 </tr>
                 <tr>
                     <td class="contains">yellow</td>
                     <td class="contains">#ffff00</td>
-                    <td style="background-color: #800080;" class="contains">4</td>
+                    <td style="background-color: #800080;" class="contains"></td>
                 </tr>
                 <tr>
                     <td class="contains">navy</td>
                     <td class="contains">#000080</td>
-                    <td style="background-color: #000080;" class="contains">4</td>
+                    <td style="background-color: #000080;" class="contains"></td>
                 </tr>
                 <tr>
                     <td class="contains">blue</td>
                     <td class="contains">#0000ff</td>
-                    <td style="background-color: #0000ff;" class="contains">4</td>
+                    <td style="background-color: #0000ff;" class="contains"></td>
                 </tr>
                 <tr>
                     <td class="contains">teal</td>
                     <td class="contains">#008080</td>
-                    <td style="background-color: #008080;" class="contains">4</td>
+                    <td style="background-color: #008080;" class="contains"></td>
                 </tr>
                 <tr>
                     <td class="contains">firebrick</td>
                     <td class="contains">#b22222</td>
-                    <td style="background-color: #b22222;" class="contains">4</td>
+                    <td style="background-color: #b22222;" class="contains"></td>
                 </tr>
                 <tr>
                     <td class="contains">floralwhite</td>
                     <td class="contains">#fffaf0</td>
-                    <td style="background-color: #fffaf0;" class="contains">4</td>
+                    <td style="background-color: #fffaf0;" class="contains"></td>
                 </tr>
                 <tr>
                     <td class="contains">forestgreen</td>
                     <td class="contains">#228b22</td>
-                    <td style="background-color: #228b22;" class="contains">4</td>
+                    <td style="background-color: #228b22;" class="contains"></td>
                 </tr>
                 <tr>
                     <td class="contains">gainsboro</td>
                     <td class="contains">#dcdcdc</td>
-                    <td style="background-color: #dcdcdc;" class="contains">4</td>
+                    <td style="background-color: #dcdcdc;" class="contains"></td>
                 </tr>
                 <tr>
                     <td class="contains">ghostwhite</td>
                     <td class="contains">#f8f8ff</td>
-                    <td style="background-color: #f8f8ff;" class="contains">4</td>
+                    <td style="background-color: #f8f8ff;" class="contains"></td>
                 </tr>
                 <tr>
                     <td class="contains">gold</td>
                     <td class="contains">#ffd700</td>
-                    <td style="background-color: #ffd700;" class="contains">4</td>
+                    <td style="background-color: #ffd700;" class="contains"></td>
                 </tr>
                 <tr>
                     <td class="contains">goldenrod</td>
                     <td class="contains">#daa520</td>
-                    <td style="background-color: #daa520;" class="contains">4</td>
+                    <td style="background-color: #daa520;" class="contains"></td>
                 </tr>
                 <tr>
                     <td class="contains">greenyellow</td>
                     <td class="contains">#adff2f</td>
-                    <td style="background-color: #adff2f;" class="contains">4</td>
+                    <td style="background-color: #adff2f;" class="contains"></td>
                 </tr>
                 <tr>
                     <td class="contains">grey</td>
                     <td class="contains">#808080</td>
-                    <td style="background-color: #808080;" class="contains">4</td>
+                    <td style="background-color: #808080;" class="contains"></td>
                 </tr>
                 <tr>
                     <td class="contains">honeydew</td>
                     <td class="contains">#f0fff0</td>
-                    <td style="background-color: #f0fff0;" class="contains">4</td>
+                    <td style="background-color: #f0fff0;" class="contains"></td>
                 </tr>
                 <tr>
                     <td class="contains">hotpink</td>
                     <td class="contains">#ff69b4</td>
-                    <td style="background-color: #ff69b4;" class="contains">4</td>
+                    <td style="background-color: #ff69b4;" class="contains"></td>
                 </tr>
                 <tr>
                     <td class="contains">indianred</td>
                     <td class="contains">#cd5c5c</td>
-                    <td style="background-color: #cd5c5c;" class="contains">4</td>
+                    <td style="background-color: #cd5c5c;" class="contains"></td>
                 </tr>
             </table>
             <hr style="border-top: 1px solid rgb(40, 167, 69);">
@@ -447,7 +448,9 @@
                 <p>&lt;/body&gt;</p>
                 <p>&lt;/html&gt;</p>
             </div><br>
-            <h4 id="item-1-3">Border</h4>
+            <hr style="border-top: 1px solid rgb(40, 167, 69);">
+            <h3 id="item-1-3">Border</h3>
+            <hr style="border-top: 1px solid rgb(40, 167, 69);">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quod soluta nostrum placeat laudantium,
                 ullam quas corporis? Atque officia, deserunt laborum, a eaque eveniet culpa autem soluta eos veniam
                 totam?</p>
