--- a/Bootstrap/CSS.html
+++ b/Bootstrap/CSS.html
@@ -108,7 +108,7 @@
         }
 
         .container {
-            border: 1px solid black;
+            border: 4px solid burlywood;
             background-color: rgb(52, 58, 64);
         }
     </style>
@@ -397,6 +397,7 @@
                 <p>&lt;/body&gt;</p>
                 <p>&lt;/html&gt;</p>
             </div><br>
+            <button type="button" onclick="editer()" class="btn btn-success">Editer</button>
             <h4 id="item-2-2">Id:</h4>
             <h4>Definition:</h4>
             <div class="container1">
@@ -410,7 +411,7 @@
                     by a class. To do this, start with the element name, then</p>
             </div>
             <h4>Example:</h4><br>
-            <div style="color: whitesmoke;" class="container col">
+            <div id="code1" style="color: whitesmoke;" class="container col">
                 <p>&lt;!DOCTYPE html&gt;</p>
                 <p>&lt;html&gt;</p>
                 <p>&lt;head&gt;</p>
@@ -448,12 +449,15 @@
                 <p>&lt;/body&gt;</p>
                 <p>&lt;/html&gt;</p>
             </div><br>
+            <button type="button" onclick="editer()" class="btn btn-success">Editer</button>
             <hr style="border-top: 1px solid rgb(40, 167, 69);">
             <h3 id="item-1-3">Border</h3>
             <hr style="border-top: 1px solid rgb(40, 167, 69);">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quod soluta nostrum placeat laudantium,
-                ullam quas corporis? Atque officia, deserunt laborum, a eaque eveniet culpa autem soluta eos veniam
-                totam?</p>
+            <div class="container1">
+                <p>The CSS <code class="w3-codespan">border</code> properties allow you to specify the style, width, and
+                    color of an element's border.</p>
+            </div>
+
             <h4 id="item-1-4">Cards</h4>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quod soluta nostrum placeat laudantium,
                 ullam quas corporis? Atque officia, deserunt laborum, a eaque eveniet culpa autem soluta eos veniam
@@ -531,6 +535,11 @@
         function myFunction() {
             var element = document.body;
             element.classList.toggle("dark-mode");
+        }
+
+        function editer() {
+            // location.replace("Editer.html");
+            window.open("Editer.html")
         }
     </script>
     <!-- Optional JavaScript -->
