--- a/Bootstrap/Editer.html
+++ b/Bootstrap/Editer.html
@@ -1,5 +1,5 @@
 <!-- JQuery -->
-
+<title>HTML Editer</title>
 <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 
 <!-- CSS Style -->
