--- a/music/index.html
+++ b/music/index.html
@@ -11,7 +11,7 @@
 <body>
     <audio controls>
         <source src="8D_Romantic Love Mashup 2020 - Parth Dodiya(PaglaSongs).mp3" type="audio/ogg">
-        <source src="8D_Standing by you - Nish (Duniya).mp3" type="audio/mpeg">
+        <source src="8D_Romantic Love Mashup 2020 - Parth Dodiya(PaglaSongs).mp3" type="audio/mpeg">
     </audio>
 </body>
 
